# CodePainter

./: README.md  meson.build
data/: me.paladin.CodePainter.appdata.xml.in  me.paladin.CodePainter.desktop.in  me.paladin.CodePainter.gresource.xml  me.paladin.CodePainter.gschema.xml  me.paladin.SchemeEditor.appdata.xml.in  me.paladin.SchemeEditor.desktop.in  me.paladin.SchemeEditor.gresource.xml  me.paladin.SchemeEditor.gschema.xml  meson.build
data/icons/: meson.build
data/ui/: dialog-create.ui  dialog-delete.ui  dialog-preferences.ui  editor-page.ui  gears-menu.ui  home-page.ui  menu-add.ui  menu-main.ui  prefs.ui  scheme-row.ui  window-main.ui  window.ui  window.ui~
po/: POTFILES  meson.build
src/: main.vala  meson.build
src/core/: application.vala
src/ui/: application-preferences.vala  application-window.vala  main-window.vala
src/ui/dialog/: create-dialog.vala  delete-dialog.vala  preferences-dialog.vala
src/ui/widget/: editor-page.vala  home-page.vala  list-box.vala
src/util/: builder-util.vala  font-util.vala  samples.vala  style.vala  xml-util.vala
